<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layout_weight="1"
                android:text="@string/name_header"
                android:textSize="16sp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginBottom="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="16dp"
                android:layout_weight="5"
                android:hint="@string/name_editText_hint"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="1"
                android:textSize="100sp" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4">

                <TextView
                    android:id="@+id/question_1_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question_1" />

                <ImageView
                    android:id="@+id/question_1_img"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_toRightOf="@id/question_1_text"
                    android:scaleType="centerInside"
                    android:src="@drawable/doves_eye_crop" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@id/question_1_text"
                    android:layout_margin="8dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <RadioButton
                            android:id="@+id/q_1_doves"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q_1_doves_eye" />

                        <RadioButton
                            android:id="@+id/q_1_eyelet"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q_1_eyelet" />

                        <RadioButton
                            android:id="@+id/q_1_kloster"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/q_1_kloster_block" />

                    </LinearLayout>
                </RadioGroup>


            </RelativeLayout>
        </LinearLayout>


        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="showScore"
            android:text="@string/submit" />

    </LinearLayout>

</ScrollView>
